--- a/package.yaml
+++ b/package.yaml
@@ -139,8 +139,9 @@ when:
     dependencies:
     - Win32
   else:
-    build-tools:
-    - hsc2hs
+    verbatim: 
+      build-tool-depends:
+        "hsc2hs:hsc2hs"
     dependencies:
     - unix
 library:
