--- a/stack-master.yaml
+++ b/stack-master.yaml
@@ -1,18 +1,21 @@
-resolver: snapshot-ghc-8.8.3.yaml
+resolver: snapshot-lts-11.yaml
 
 packages:
 - .
 
 docker:
   enable: false
-  repo: fpco/stack-build-small:lts-13.26
+  repo: fpco/stack-build:lts-11.22
 
 nix:
   # --nix on the command-line to enable.
-  enable: false
   packages:
     - zlib
     - unzip
+flags:
+  stack:
+    hide-dependency-versions: true
+    supported-build: true
 
 ghc-options:
    "$locals": -fhide-source-paths
